--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@fullstackcraft/react-native-keyboard-shift",
-  "version": "1.1.5-alpha0",
+  "name": "@tastyworks/react-native-keyboard-shift",
+  "version": "1.1.6",
   "description": "A 2020s compatible keyboard avoiding view for Android and iOS that just works.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
