--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "@types/react-native": "^0.65.3",
     "jest": "^27.2.4",
     "prettier": "^2.4.1",
+    "react": ">= 17.0.2",
+    "react-native": ">=0.64.0",
     "ts-jest": "^27.0.5",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "react": ">= 17.0.2",
-    "react-native": ">=0.64.0"
+    "typescript": "^4.5.5"
   },
   "files": [
     "lib/**/*"
